[package]
name = "dos101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
crseo = { version = "0.4.4", path = "../crseo" }
dos-actors = { version = "1.0.1", path = "../dos-actors", features = [
    "ceo",
    "apache-arrow",
] }
nalgebra = "0.31.1"
skyangle = "0.1.2"
tokio = "1.18.2"
uid = { version = "0.1.1", package = "dos-uid" }
uid-derive = { version = "0.3.0", package = "dos-uid-derive" }
vec_box = "1.0.0"
